fix 1 euro plate form fee and hide search bar and filter from booking screen

--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -16,6 +16,7 @@
 
         <include
             android:id="@+id/includeSearchView"
+            android:visibility="gone"
             layout="@layout/search_layout" />
 
         <com.faltenreich.skeletonlayout.SkeletonLayout
