--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -48,6 +48,31 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         style="@style/HeadLine_7"
+                        android:text="@string/current_password" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/tlCurrentPassword"
+                        style="@style/TextInputLayoutStyle"
+                        app:passwordToggleEnabled="true">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/teCurrentPassword"
+                            style="@style/TextInputEditTextStyle"
+                            android:hint="@string/current_password_here"
+                            android:inputType="textPassword" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:divider="@drawable/divider_section_space"
+                    app:showDividers="middle">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/HeadLine_7"
                         android:text="@string/password" />
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +81,7 @@
                         app:passwordToggleEnabled="true">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/tePassword"
+                            android:id="@+id/teNewPassword"
                             style="@style/TextInputEditTextStyle"
                             android:hint="@string/your_password_here"
                             android:inputType="textPassword" />
