fix rating and share text and support email

--- a/app/src/main/res/layout/dialog_rating_bar.xml
+++ b/app/src/main/res/layout/dialog_rating_bar.xml
@@ -42,6 +42,7 @@
                 style="@style/RatingBarTheme"
                 android:scaleX="2"
                 android:scaleY="2"
+                android:rating="5"
                 android:stepSize="1" />
 
             <com.google.android.material.divider.MaterialDivider
