--- a/app/src/main/res/layout/confirmed_booking_detail_item.xml
+++ b/app/src/main/res/layout/confirmed_booking_detail_item.xml
@@ -67,6 +67,7 @@
                     android:id="@+id/btnCancelBooking"
                     style="@style/SecondaryRoundedButton"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:text="@string/cancel_booking" />
 
