--- a/app/src/main/res/layout/waiting_booking_detail_item.xml
+++ b/app/src/main/res/layout/waiting_booking_detail_item.xml
@@ -73,6 +73,7 @@
                         style="@style/SecondaryRoundedButton"
                         android:layout_alignParentEnd="true"
                         android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:text="@string/cancel_booking" />
 
@@ -91,17 +92,21 @@
                         android:id="@+id/btnCancelBooking"
                         style="@style/SecondaryRoundedButton"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:layout_weight="1"
+                        android:layout_alignParentEnd="true"
+                        android:visibility="visible"
                         android:text="@string/cancel_booking" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btnAccept"
                         style="@style/PrimaryRoundedButton"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
                         android:layout_weight="1"
                         android:visibility="visible"
-                        android:maxLines="1"
                         android:layout_alignParentEnd="true"
                         android:text="@string/accept" />
 
