--- a/app/src/main/res/layout/trip_editable_route_item.xml
+++ b/app/src/main/res/layout/trip_editable_route_item.xml
@@ -82,13 +82,31 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/HeadLine_7"
+                        android:text="@string/distanceRange" />
+                    <com.google.android.material.slider.RangeSlider
+                        android:id="@+id/fromSlider"
+                        style="@style/customSlider"
+                        android:layout_width="match_parent"
+                        android:layout_height="10dp"
+                        android:stepSize="1.0"
+                        android:valueFrom="0.0"
+                        android:valueTo="20.0"
+                        app:trackColorActive="@color/on_primary_green_color"
+                        app:thumbColor="@color/on_primary_green_color"
+                        app:haloColor="@color/on_primary_green_color"
+                        app:thumbRadius="@dimen/_7sdp">
+
+                    </com.google.android.material.slider.RangeSlider>
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/ltLocationWhereTo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginTop="@dimen/field_start_margin"
                     android:orientation="vertical"
                     android:paddingStart="@dimen/field_start_margin"
                     app:divider="@drawable/divider_section_space"
@@ -114,6 +132,24 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/HeadLine_7"
+                        android:text="@string/distanceRange" />
+                    <com.google.android.material.slider.RangeSlider
+                        android:id="@+id/whereSlider"
+                        style="@style/customSlider"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:stepSize="1.0"
+                        android:valueFrom="0.0"
+                        android:valueTo="20.0"
+                        app:trackColorActive="@color/on_primary_green_color"
+                        app:thumbColor="@color/on_primary_green_color"
+                        app:haloColor="@color/on_primary_green_color"
+                        app:thumbRadius="@dimen/_7sdp">
+
+                    </com.google.android.material.slider.RangeSlider>
+
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -123,7 +159,9 @@
 
                         <androidx.appcompat.widget.AppCompatTextView
                             style="@style/HeadLine_6"
-                            android:text="@string/choose_the_date_of_the_trip" />
+                            android:text="@string/choose_the_date_of_the_trip"
+                            android:drawableTint="@color/black"
+                            android:drawableRight="@drawable/bnv_bookings_icon"/>
 
                         <EditText android:id="@+id/chooseDate"
                             style="@style/TextInputEditTextStyle"
@@ -133,7 +171,7 @@
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="25sp"
+                            android:textSize="@dimen/_15sdp"
                             android:background="@null"
                             android:hint="@string/choose_date"
 
@@ -152,8 +190,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/flexible"
-                            android:buttonTint="@color/on_primary_green_color"
-                            />
+                            app:buttonTint="@color/on_primary_green_color" />
 
                         <RelativeLayout
                             android:layout_width="wrap_content"
@@ -163,13 +200,13 @@
                             android:layout_marginTop="-5dp"
                             >
                             <Button
+                                style="@style/PrimaryRoundedButton"
                                 android:id="@+id/removeBtn"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
+                                android:layout_width="@dimen/counterBtnRadius"
+                                android:layout_height="@dimen/counterBtnRadius"
                                 android:layout_alignParentStart="true"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/custom_btn_remove"
-                                android:backgroundTint="@color/on_primary_green_color"/>
+                                android:background="@drawable/custom_btn_remove"/>
                             <EditText
                                 android:id="@+id/itemQuanEt"
                                 android:layout_width="wrap_content"
@@ -186,13 +223,13 @@
                                 android:inputType="none"
                                 />
                             <Button
+                                style="@style/PrimaryRoundedButton"
                                 android:id="@+id/addBtn"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
+                                android:layout_width="@dimen/counterBtnRadius"
+                                android:layout_height="@dimen/counterBtnRadius"
                                 android:layout_alignParentEnd="true"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/custom_btn_add"
-                                android:backgroundTint="@color/on_primary_green_color"/>
+                                android:background="@drawable/custom_btn_add"/>
                         </RelativeLayout>
 
 
