faq ui adjusted

--- a/app/src/main/res/layout/expandable_textview_item.xml
+++ b/app/src/main/res/layout/expandable_textview_item.xml
@@ -17,6 +17,7 @@
             style="@style/HeadLine_6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingRight="@dimen/_15sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
